[package]
name = "breaks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# msgbox = "0.7.0"
# native-dialog = "0.6.3"
anyhow = "1.0.57"
user-idle = "0.5.1"

tts = "0.22.1"
lock = "0.1.0"

druid = { git = "https://github.com/linebender/druid" }

home = "0.5.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.23"

[dev-dependencies]
serde_json = "1.0.81"